2010-06-16  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (Fsort): Fix invalid tests.

2010-06-15  Rik <octave@nomad.inbox5.com>

	* pr-output.cc: Second try at removing extra newlines from NDArrays

2010-06-14  Rik <octave@nomad.inbox5.com>

	* pr-output.cc: Remove extra newlines when displaying multi-dimensional
        arrays (bug #30029).

2010-06-14  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (Fsort, Fnth_element): Fix behavior when trailing singleton
	dim is specified.

2010-06-12  Ben Abbott <bpabbott@mac.com>

	* DLD-FUNCTIONS/gammainc.cc: Fix doc-string typo.

2010-06-11  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/gammainc.cc: Implement complementary incomplete
	gamma function.

2010-06-10  Ben Abbott <bpabbott@mac.com>

	* data.cc: Fix test for concatentating empty nd-arrays.

2010-06-10  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (Fvec): New DEFUN.

2010-06-09  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (Freshape): Use octave_idx_type rather than int.
	Don't use intermediate Array when sizes are given as separate
	arguments. Simplify computing unknown dimension.

2010-06-09  David Grundberg  <individ@acc.umu.se>

	* ov-struct.cc (Fisfield): Accept cell array as name argument.

2010-06-08  Rik <octave@nomad.inbox5.com>

        * DLD-FUNCTIONS/bsxfun.cc, DLD-FUNCTIONS/cellfun.cc, 
        DLD-FUNCTIONS/det.cc, DLD-FUNCTIONS/lookup.cc, DLD-FUNCTIONS/lu.cc, 
        DLD-FUNCTIONS/rand.cc, DLD-FUNCTIONS/svd.cc, DLD-FUNCTIONS/tril.cc, 
        data.cc, ov.cc: Improve documentation string.

2010-06-06  Michael Goffioul  <michael.goffioul@gmail.com>

	* data.cc (Frem, Fmod): Specify template arguments of binmap
	explicitely.

2010-06-02  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/strfind.cc (Fqs_replace): Allow overlapped matches.
	(Fstrrep): Support "overlaps" option.
	(Fstrfind): Ditto.

2010-05-28  Jaroslav Hajek  <highegg@gmail.com>

	* ov.h (octave_value::fast_elem_extract,
	octave_value::fast_elem_insert): New methods.